package org.shared.board.common;

/**
 * The type Message codes.
 */
public final class MessageCodes {
    /**
     * The constant COMMTEST.
     */
    public static final int COMMTEST = 0;
    /**
     * The constant DISCONN.
     */
    public static final int DISCONN = 1;
    /**
     * The constant ACK.
     */
    public static final int ACK = 2;
    /**
     * The constant ERR.
     */
    public static final int ERR = 3;
    /**
     * The constant AUTH.
     */
    public static final int AUTH = 4;

    /**
     * The constant CB.
     */
    public static final int CB = 5;

    /**
     * The constant CPI.
     */
    public static final int CPI = 6;

    /**
     * The constant UPI.
     */
    public static final int UPI = 7;

    /**
     * The constant UPIC.
     */
    public static final int UPIC = 10;

    /**
     * The constant UPIP.
     */
    public static final int UPIP = 11;

    /**
     * The constant DPI.
     */
    public static final int DPI = 12;

    public static final int VBH = 13;

    public static final int RVBH = 14;

    public static final int SAB = 15;

    private MessageCodes() {
        // Private constructor to prevent instantiation
    }
}
