@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false


class MainMenuUI <<presentation>>
class SharedBoardAppController <<application>>
class MessageFormat
class MessageCodes


MainMenuUI --> SharedBoardAppController: theController
SharedBoardAppController --> MessageFormat: mf
MainMenuUI ..> MessageCodes
SharedBoardAppController ..> MessageCodes

MainMenuUI : doShow()
MainMenuUI : handleACK(int, String, String)
SharedBoardAppController : sendCommunicationTest()
SharedBoardAppController : sendEndOfSession()
SharedBoardAppController : authenticate(String)
MessageFormat : sendMessage(int, int, String)
MessageFormat : readMessage()

@enduml